Use LocalDB connection string and EnsureCreated for dev

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "LLMApi:ApiKey": "key",
   "ConnectionStrings": {
-    "mycon": "Data Source=DESKTOP-P1V6E36\\SQLEXPRESS;Initial Catalog=isgasoir;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "mycon": "Server=(localdb)\\MSSQLLocalDB;Database=isgasoir;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
